--- a/templates/home.html
+++ b/templates/home.html
@@ -3,10 +3,10 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-  <h1>Home</h1>
+  <h1 id="homeheader">Forum Information</h1>
 
-<p>This is a sample application to demonstrate authenticating against github oauth,
-using Flask, on Heroku.</p>
+<p class="homep">[more detailed information about what this form is about and why we made it or w/e that will be added later <3]</p> <br><br>
+<p class="homep">To use this forum, you must be signed in. To do this, click the "sign in" button in the corner of the page. Once you are signed in, you will be able to post anything you want to the forum (though we do ask that you keep it on topic!). Keep in mind, this forum is NOT anonymous- your name will be displayed with your posts. [Etc etc more instructions on how to use the website maybe? add later once we have everything working so the instructions or whatever can be more detailed]</p>
 
 
 {% endblock %}
