--- a/templates/page1.html
+++ b/templates/page1.html
@@ -3,9 +3,9 @@
 {% block title %}page1{% endblock %}
 
 {% block content %}
-  <h1>This is Page 1</h1>
+  <h1 id="forumheader">Forum Name</h1>
 
-<p>Lorem ipsum sit dolor amet.</p>
+<p id="forump"">Please be respectful and keep your posts on topic!</p>
 
 <pre>
 {{ dump_user_data }}
