Now displays all posts in a table after post submission, change it to look better.

--- a/templates/page1.html
+++ b/templates/page1.html
@@ -29,6 +29,7 @@
 			<h1>All posts</h1>
 			<table class="table table-bordered table-striped">
 				<caption>Caption</caption>
+				{{ posts }}
 				<!-- <thead>
 					<tr>
 						<th>
