--- a/templates/page1.html
+++ b/templates/page1.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}page1{% endblock %}
+{% block title %}Forum{% endblock %}
 
 {% block content %}
 	<h1 id="forumheader">Forum Name</h1>
