--- a/templates/page1.html
+++ b/templates/page1.html
@@ -42,6 +42,7 @@
 		<input type="submit" value="Clear Search">
 	</form>
 
+	<!-- use visibility: hidden when using the flexbox layout in bootstrap to 'indent' replies -->
 	<div class="container-fluid">
 		<div class="row-fluid">
 			<h1>All posts</h1>
