--- a/templates/page1.html
+++ b/templates/page1.html
@@ -46,7 +46,7 @@
 	<div class="container-fluid">
 		<div class="row-fluid">
 			<h1>All posts</h1>
-			<table class="table table-bordered table-striped">
+			<table class="table table-bordered table-striped" id="posts">
 				<caption>Caption</caption>
 				{{ posts }}
 				<!-- <thead>
