--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
 		<script src="https://cdn.ckeditor.com/ckeditor5/11.0.1/classic/ckeditor.js"></script>
 
 		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-		<script src="../static/script.js"></script>
+		<script src="/static/script.js"></script>
 		<title>{% block title %}{% endblock %} - My Webpage</title>
 
 
