Display posts in flex somewhat working

--- a/templates/page1.html
+++ b/templates/page1.html
@@ -48,7 +48,7 @@
 			<h1>All posts</h1>
 			<table class="table table-bordered table-striped" id="posts">
 				<caption>Caption</caption>
-				{{ posts }}
+				<!-- {{ posts }}
 				<!-- <thead>
 					<tr>
 						<th>
@@ -61,6 +61,10 @@
 				</thead> -->
 			</table>
 		</div>
+	</div>
+	
+	<div class="container mt-3">
+		{{ bs_posts }}
 	</div>
 	
 	
