--- a/templates/page1.html
+++ b/templates/page1.html
@@ -26,7 +26,7 @@
 	
 	<br>
 	
-	<form action="/search">
+	<form action="/search" method="post">
 		<label for="search_query">Search for:</label> <br>
 		<input type="text" name="search_query" required></input>
 		
@@ -48,7 +48,7 @@
 			<h1>All posts</h1>
 			<table class="table table-bordered table-striped" id="posts">
 				<caption>Caption</caption>
-				<!-- {{ posts }}
+				{{ posts }}
 				<!-- <thead>
 					<tr>
 						<th>
