--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,6 +17,7 @@
 		<!-- Text editor for text area -->
 		<script src="https://cdn.ckeditor.com/ckeditor5/11.0.1/classic/ckeditor.js"></script>
 
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 		<script src="/static/script.js"></script>
 		<title>{% block title %}{% endblock %} - My Webpage</title>
