--- a/templates/page1.html
+++ b/templates/page1.html
@@ -30,11 +30,11 @@
 		<label for="search_query">Search for:</label> <br>
 		<input type="text" name="search_query" required></input>
 		
-		<input type="radio" id="for_username" name="option" value="username" required>
+<!-- 		<input type="radio" id="for_username" name="option" value="username" required>
 		<label for="for_username"> Username</label>
 		<input type="radio" id="for_keyword" name="option" value="text" required>
 		<label for="for_keyword"> Keyword</label><br>
-		
+ -->		
 		<input type="submit" value="Search">
 	</form>
 	
