--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 	<h1 id="homeheader">Forum Information</h1>
-
+    <p class="homep"> This is a forum that we made as our final project for our computer science class. We made it with the intention of making a place where people can post questions about coding, or advice for coding! You can ask or post about any language you want.</p>
 	<p class="homep">To use this forum, you must be signed in. To do this, click the "sign in" button in the corner of the page. Once you are signed in, you will be able to post anything you want to the forum (though we do ask that you keep it on topic!). Keep in mind, this forum is NOT anonymous- your name will be displayed with your posts. You're also able to respond to other people's posts!</p>
 
 {% endblock %}
