--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,3 @@
-body {
-
-}
-
 #content {
     margin: auto;
     font-family: Didot;
@@ -19,7 +15,7 @@ body {
 
 .homep{
     text-align: left;
-    margin-left: 20px;
+    margin: 20px;
 }
 
 #forumheader{
@@ -32,4 +28,20 @@ body {
     width: 50%;
     margin: auto
 }
-    
+
+#search{
+    width: 50%;
+    text-align: left;
+    margin-left: 15px;
+}
+
+#texteditor{
+    width: 75%;
+    text-align: left;
+    margin: auto;
+}
+
+.centerthese{
+    text-align: center;
+}
+
