--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,54 @@
 #content {
     margin: auto;
-    font-family: Didot;
-    
+}
+
+p {
+	font-family: 'Open Sans', sans-serif;
+	text-align: left;
+	vertical-align: top;
+	font-size: 100%;
+	margin-right: 10px;
+	margin-left: 15px;
+}
+
+.level0 {
+	margin-left: 80px;
+	margin-right: 30px;
+}
+
+.level1 {
+	margin-left: 110px;
+	margin-right: 30px;
+}
+
+.level2 {
+	margin-left: 140px;
+	margin-right: 30px;
+}
+
+.level3 {
+	margin-left: 170px;
+	margin-right: 30px;
+}
+
+.level4 {
+	margin-left: 200px;
+	margin-right: 30px;
+}
+
+.level5 {
+	margin-left: 230px;
+	margin-right: 30px;
+}
+
+.card-title {
+	margin-left: 5px;
+	margin-top: 5px;
+}
+
+.card-subtitle {
+	margin-left: 5px;
+	margin-bottom: 5px;
 }
 
 .replyForm {
@@ -45,3 +92,71 @@
     text-align: center;
 }
 
+
+input[type=submit] {
+	outline: 0;
+	grid-gap: 8px;
+	align-items: center;
+	background: 0 0;
+	border: 1px solid #000;
+	border-radius: 4px;
+	cursor: pointer;
+	display: inline-flex;
+	flex-shrink: 0;
+	font-size: 12px;
+	gap: 4px;
+	justify-content: center;
+	line-height: 1.5;
+	overflow: hidden;
+	padding: 6px 9px;
+	text-decoration: none;
+	text-overflow: ellipsis;
+	transition: all .14s ease-out;
+	white-space: nowrap;
+	margin: 5px;
+}
+	
+input[type=submit]:focus-visible{
+	outline-offset: 1px;
+	margin: 5px;
+}
+
+input[type=submit]:hover{
+	box-shadow: 4px 4px 0 #000;
+	transform: translate(-4px,-4px);
+	margin: 5px;
+}
+
+button {
+	outline: 0;
+	grid-gap: 8px;
+	align-items: center;
+	background: 0 0;
+	border: 1px solid #000;
+	border-radius: 4px;
+	cursor: pointer;
+	display: inline-flex;
+	flex-shrink: 0;
+	font-size: 12px;
+	gap: 4px;
+	justify-content: center;
+	line-height: 1.5;
+	overflow: hidden;
+	padding: 6px 9px;
+	text-decoration: none;
+	text-overflow: ellipsis;
+	transition: all .14s ease-out;
+	white-space: nowrap;
+	margin: 5px;
+}
+	
+button:focus-visible{
+	outline-offset: 1px;
+	margin: 5px;
+}
+
+button:hover{
+	box-shadow: 4px 4px 0 #000;
+	transform: translate(-4px,-4px);
+	margin: 5px;
+}
